mongo replica set

--- a/src/dashboard-client/src/style.css
+++ b/src/dashboard-client/src/style.css
@@ -32,7 +32,7 @@ body {
 }
 
 .Vue-Toastification__toast--success {
-  border-color: #10b981 !important;
+  border-color: #5fbfbb !important;
 }
 
 .Vue-Toastification__toast--error {
