--- a/src/honeypot-node3/src/style.css
+++ b/src/honeypot-node3/src/style.css
@@ -12,7 +12,7 @@ body {
 }
 
 .navbar {
-    background-color: #0bdbb8;
+    background-color: #03dcbb;
     color: #fff;
     padding: 15px 20px;
     display: flex;
